--- a/assets/stylesheets/scss/responsive.scss
+++ b/assets/stylesheets/scss/responsive.scss
@@ -127,11 +127,13 @@
 @media screen and (max-width: 991px) {
     .md-pr-5{
         padding-right: 150px;
+        padding-left: 150px;
     }
 }
 @media screen and (max-width: 767px) {
     .md-pr-5{
         padding-right: 80px;
+        padding-left: 80px;
     }
     .menu-user {
         > a {
